feat(thesis): WIP thesis

--- a/docs/thesis/bibliografia.bib
+++ b/docs/thesis/bibliografia.bib
@@ -1,4 +1,5 @@
-% Książka.
+% PD1
+
 @book{martin2017,
   author    = {Robert C. Martin},
   title     = {Clean Architecture: A Craftsman's Guide to Software Structure and Design},
@@ -155,4 +156,106 @@
   note   = {Dostęp zdalny (07.06.2023): \url{https://martinfowler.com/eaaDev/EventSourcing.html}},
   title  = {Event Sourcing},
   year   = {2005}
+}
+
+% SDI
+
+@misc{cap,
+  title        = {Definicja twierdzenia "{CAP}"},
+  howpublished = {Dostęp zdalny (24.11.2023): \url{https://www.scylladb.com/glossary/cap-theorem/}}
+}
+
+@misc{event_storming,
+  title        = {Strona internetowa o technice Burzy Zdarzeń},
+  howpublished = {Dostęp zdalny (24.11.2023): \url{https://www.eventstorming.com}}
+}
+
+@misc{axon_framework,
+  title        = {Strona internetowa biblioteki Axon Framework},
+  howpublished = {Dostęp zdalny (24.11.2023): \url{https://developer.axoniq.io/axon-framework/overview}}
+}
+
+@misc{axon_server,
+  title        = {Strona internetowa programu Axon Server},
+  howpublished = {Dostęp zdalny (24.11.2023): \url{https://developer.axoniq.io/en/axon-server/overview}}
+}
+
+@misc{spring_boot,
+  title        = {Strona internetowa biblioteki Spring Boot},
+  howpublished = {Dostęp zdalny (24.11.2023): \url{https://spring.io/projects/spring-boot}}
+}
+
+@misc{grpc,
+  title        = {Strona internetowa protokołu gRPC},
+  howpublished = {Dostęp zdalny (24.11.2023): \url{https://grpc.io}}
+}
+
+@misc{rabbitmq,
+  title        = {Strona internetowa kolejki wiadomości RabbitMQ},
+  howpublished = {Dostęp zdalny (24.11.2023): \url{https://www.rabbitmq.com}}
+}
+
+@misc{kafka,
+  title        = {Strona internetowa kolejki wiadomości Apache Kafka},
+  howpublished = {Dostęp zdalny (24.11.2023): \url{https://kafka.apache.org}}
+}
+
+@misc{rys1,
+  title        = {Reprezentacja graficzna systemu o architekturze mikroserwisowej},
+  howpublished = {Dostęp zdalny (24.11.2023): \url{https://asseconews.pl/dlaczego-wartosc-tworzyc-aplikacje-w-architekturze-mikroserwisowej}}
+}
+
+@misc{rys2,
+  title        = {Reprezentacja graficzna twierdzenia "{CAP}"},
+  howpublished = {Dostęp zdalny (24.11.2023): \url{https://datascience.eu/pl/programowanie-komputerowe/twierdzenie-cap-i-rozproszone-systemy-zarzadzania-bazami-danych}}
+}
+
+@book{event_storming_rys,
+  author       = {Alberto Brandolini},
+  title        = {Introducing Event Storming}
+}
+
+@misc{eventual_consistency,
+  title        = {Definicja pojęcia spójności ostatecznej},
+  howpublished = {Dostęp zdalny (24.11.2023): \url{https://www.scylladb.com/glossary/eventual-consistency}}
+}
+
+@misc{ddd,
+  title        = {Definicja techniki DDD},
+  howpublished = {Dostęp zdalny (24.11.2023): \url{https://martinfowler.com/bliki/DomainDrivenDesign.html}}
+}
+
+@misc{cqrs,
+  title        = {Definicja wzorca CQRS},
+  howpublished = {Dostęp zdalny (24.11.2023): \url{https://martinfowler.com/bliki/CQRS.html}}
+}
+
+@misc{event_sourcing,
+  title        = {Definicja wzorca Event Sourcing},
+  howpublished = {Dostęp zdalny (24.11.2023): \url{https://martinfowler.com/eaaDev/EventSourcing.html}}
+}
+
+@misc{saga,
+  title        = {Definicja wzorca Saga},
+  howpublished = {Dostęp zdalny (24.11.2023): \url{https://microservices.io/patterns/data/saga.html}}
+}
+
+@misc{gmaps,
+  title        = {Strona internetowa platformy Google Maps},
+  howpublished = {Dostęp zdalny (24.11.2023): \url{https://mapsplatform.google.com}}
+}
+
+@misc{stripe,
+  title        = {Strona internetowa bramki płatności Stripe},
+  howpublished = {Dostęp zdalny (24.11.2023): \url{https://stripe.com}}
+}
+
+@misc{mongodb,
+  title        = {Strona internetowa bazy danych MongoDB},
+  howpublished = {Dostęp zdalny (24.11.2023): \url{https://www.mongodb.com}}
+}
+
+@misc{locust,
+  title        = {Strona internetowa biblioteki Locust},
+  howpublished = {Dostęp zdalny (24.11.2023): \url{https://locust.io}}
 }
