--- a/docs/thesis/tex/4-architektura.tex
+++ b/docs/thesis/tex/4-architektura.tex
@@ -4,14 +4,26 @@
 
 Potrzebna taka osobna sekcja?
 
-\subsection{Axon Server}
+\subsection{Podział na mikroserwisy}
 
 XXX
 
-\subsection{co tu wsadzic?}
+\subsection{Model C4 systemu}
 
 XXX
 
-\subsection{Model 3C}
+\subsection{Persystencja danych}
+
+XXX
+
+\subsection{Kolejka komunikatów i magazyn zdarzeń}
+
+XXX
+
+\subsection{Uwierzytelnianie i autoryzacja}
+
+XXX
+
+\subsection{Integracje zewnętrzne}
 
 XXX
