--- a/docs/thesis/tex/7-testowanie.tex
+++ b/docs/thesis/tex/7-testowanie.tex
@@ -6,8 +6,20 @@ Testy jednostkowe, integracyjne, wydajnościowe. Raport z wydajności i skalowal
 
 \subsection{Testy jednostkowe}
 
+TODO
+
 \subsection{Testy integracyjne}
+
+TODO
 
 \subsection{Testy akceptacyjne}
 
+TODO
+
 \subsection{Testy wydajnościowe}
+
+Przeprowadzono testy wydajnościowe przy pomocy narzędzia Locust \cite{locust}, które wykazały stabilność systemu, przy obciążeniu na poziomie 265 żądań HTTP na sekundę.
+
+W ramach pracy inżynierskiej Autor kontynuuje pracę nad zwiększaniem wydajności i skuteczności systemu oraz dalszymi testami wydajnościowymi.
+
+TODO
