--- a/docs/thesis/main.tex
+++ b/docs/thesis/main.tex
@@ -43,14 +43,16 @@
 % Title in English for English theses
 % In English theses, you may remove this command
 \engtitle{
-    Unnecessarily long and complicated thesis' title \\
-    difficult to read, understand and pronounce
+    Application of microservice architectures \\
+    in creating scalable web applications:\\
+    a case study of a restaurant order management application
 }
 % Title in Polish for English theses
 % Use it only in English theses
 \poltitle{
-    Niepotrzebnie długi i skomplikowany tytuł pracy \\
-    trudny do przeczytania, zrozumienia i wymówienia
+    Zastosowanie architektur mikroserwisowych\\
+    w tworzeniu skalowalnych aplikacji webowych\\ 
+    na przykładzie aplikacji do obsługi zamówień restauracyjnych
 }
 \author{Bartłomiej Patryk Rasztabiga}
 \album{304117}
@@ -63,16 +65,26 @@
 % English abstract if \langeng is set
 %-------------------------------------
 \cleardoublepage % Zaczynamy od nieparzystej strony
-\abstract \lipsum[1-3]
-\keywords XXX, XXX, XXX
+\abstract
+
+Praca prezentuje proces projektowania oraz implementacji aplikacji webowej opartej na architekturze mikroserwisowej.
+
+\textbf{TODO}
+
+\keywords architektura mikroserwisowa, skalowalnosć, spójność ostateczna, kolejki komunikatów, burza zdarzeń
 
 %----------------------------------------
 % Streszczenie po angielsku dla \langpol
 % Polish abstract if \langeng is set
 %----------------------------------------
 \clearpage
-\secondabstract \kant[1-3]
-\secondkeywords XXX, XXX, XXX
+\secondabstract
+
+The thesis presents the process of designing and implementing a web application based on microservice architecture
+
+\textbf{TODO}
+
+\secondkeywords microservice architecture, scalability, eventual consistency, message queues, event storming
 
 \pagestyle{plain}
 
@@ -110,11 +122,11 @@
 % generuje właściwy tytuł sekcji, w zależności od języka.
 % Makro \acronym dodaje skrót/symbol do listy,
 % zapewniając podstawowe formatowanie.
-\acronymlist
-\acronym{EiTI}{Wydział Elektroniki i Technik Informacyjnych}
-\acronym{PW}{Politechnika Warszawska}
-\acronym{WEIRD}{ang. \emph{Western, Educated, Industrialized, Rich and Democratic}}
-\vspace{0.8cm}
+% \acronymlist
+% \acronym{EiTI}{Wydział Elektroniki i Technik Informacyjnych}
+% \acronym{PW}{Politechnika Warszawska}
+% \acronym{WEIRD}{ang. \emph{Western, Educated, Industrialized, Rich and Democratic}}
+% \vspace{0.8cm}
 
 %--------------------------------------
 % Spisy: rysunków, tabel, załączników
