--- a/docs/thesis/tex/2-techniki.tex
+++ b/docs/thesis/tex/2-techniki.tex
@@ -19,7 +19,7 @@ Z powodu konieczności komunikacji między elementami systemu, często utrudnion
 
 Stosując architekturę mikroserwisową, systemy informatyczne mogą spełniać wymagania dotyczące wysokiej niezawodności i dostępności - każdy serwis może być uruchomiony w więcej niż jednej instancji, równo rozkładając ruch pomiędzy nie. System jest wtedy też odporny na chwilową niedostępność niektórych instancji.
 
-TODO
+TODO porównanie z monolitem
 
 \subsection{Skalowalność}
 
