--- a/docs/thesis/main.tex
+++ b/docs/thesis/main.tex
@@ -67,11 +67,19 @@
 \cleardoublepage % Zaczynamy od nieparzystej strony
 \abstract
 
-Praca prezentuje proces projektowania oraz implementacji aplikacji webowej opartej na architekturze mikroserwisowej.
+Praca prezentuje proces projektowania oraz implementacji systemu informatycznego opartego na architekturze mikroserwisowej, służącego do obsługi zamówień restauracyjnych w kontekście dostaw jedzenia. Został on zaimplementowany jako dwie warstwy: kliencka (aplikacja internetowa działająca w przeglądarce) oraz serwerowa.
 
-\textbf{TODO}
+Kolejne etapy, zrealizowane w ramach poniższej pracy inżynierskiej, to analiza wymagań funkcjonalnych oraz niefunkcjonalnych, podział systemu na mikroserwisy, implementacja aplikacji odpowiedzialnych za warstwę prezentacji, logikę biznesową oraz zarządzanie warstwą danych. Zwieńczeniem pracy było przetestowanie systemu pod kątem skalowalności i wydajności.
 
-\keywords architektura mikroserwisowa, skalowalnosć, spójność ostateczna, kolejki komunikatów, burza zdarzeń
+Analiza wymagań została poprzedzona omówieniem architektury mikroserwisowej oraz wzorców i technik pomocnych w tworzeniu skalowalnych aplikacji webowych.
+
+W trakcie opisywania implementacji systemu omówiono na bieżąco używane narzędzia i technologie, wraz z przykładami ich zastosowania w systemie. Zastosowano projekcyjne bazy danych w technologii MongoDB. Warstwa logiki biznesowej to mikroserwisy napisane w języku Kotlin, przy użyciu Spring Framework oraz Axon Framework, udostępniające interfejs REST. Zdarzenia są przechowywane i dostarczane pomiędzy serwisami przy pomocy narzędzia Axon Server. Warstwa prezentacji to aplikacja webowa, uruchamiana w przeglądarce klienckiej, przy wykorzystaniu bibliotek Remix i React.
+
+Testowanie systemu składało się z przygotowania oraz przeprowadzanie testów jednostkowych, integracyjnych, akceptacyjnych oraz wydajnościowych.
+
+W podsumowaniu przedstawiono wnioski z testów wydajności prezentujące skalowalność systemu oraz możliwości dalszego jego rozwoju.
+
+\keywords architektura mikroserwisowa, skalowalnosć, aplikacje webowe, Kotlin, Spring, Axon, MongoDB, React
 
 %----------------------------------------
 % Streszczenie po angielsku dla \langpol
@@ -80,11 +88,19 @@ Praca prezentuje proces projektowania oraz implementacji aplikacji webowej opart
 \clearpage
 \secondabstract
 
-The thesis presents the process of designing and implementing a web application based on microservice architecture
+The thesis presents the process of designing and implementing an information system based on microservices architecture for managing restaurant orders in the context of food delivery. It has been implemented as two layers: client (a web application operating in a browser) and server.
 
-\textbf{TODO}
+The subsequent stages, realized within this engineering thesis, include the analysis of functional and non-functional requirements, division of the system into microservices, implementation of applications responsible for the presentation layer, business logic, and data layer management. The culmination of the work was testing the system in terms of scalability and performance.
 
-\secondkeywords microservice architecture, scalability, eventual consistency, message queues, event storming
+The requirements analysis was preceded by a discussion of the microservices architecture and patterns and techniques helpful in creating scalable web applications.
+
+During the description of the system implementation, the tools and technologies used were discussed on an ongoing basis, along with examples of their application in the system. Projection databases in MongoDB technology were used. The business logic layer consists of microservices written in Kotlin, using the Spring Framework and Axon Framework, providing a REST interface. Events are stored and delivered between services using the Axon Server tool. The presentation layer is a web application, launched in the client's browser, using Remix and React libraries.
+
+Testing of the system consisted of preparing and conducting unit, integration, acceptance, and performance tests.
+
+The summary presents conclusions from performance tests showing the scalability of the system and possibilities for its further development.
+
+\secondkeywords microservices architecture, scalability, web applications, Kotlin, Spring, Axon, MongoDB, React
 
 \pagestyle{plain}
 
